Update image URL to high-resolution version in product.html

--- a/product.html
+++ b/product.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Our Products</h1>
     <p>Welcome to our product page!</p>
-    <!-- Replace image URLs with high-resolution versions -->
-    <img src="images/product-low-res.jpg" alt="Product">
+    <!-- Update image URL to high-resolution version -->
+    <img src="images/product-high-res.jpg" alt="Product">
 
 <script src="assets/js/script.js"></script>
 </body>
